Added the mysysmetricencryptiondecryption.py to the .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /denisputnam-blockchain-exercise.zip
 /denisputnam-cryptography-overview-exercise/myhashfunctions.py.zip
+/denisputnam-cryptography-overview-exercise/mysymmetricencryptiondecryption.py.zip
