Added Archive.zip for ECC

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /denisputnam-blockchain-exercise.zip
 /denisputnam-cryptography-overview-exercise/myhashfunctions.py.zip
 /denisputnam-cryptography-overview-exercise/mysymmetricencryptiondecryption.py.zip
+/ECC/Archive.zip
