Added another .zip to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /denisputnam-cryptography-overview-exercise/myhashfunctions.py.zip
 /denisputnam-cryptography-overview-exercise/mysymmetricencryptiondecryption.py.zip
 /ECC/Archive.zip
+/ECC/denisputnam-blockchain-cryptography-exercise.zip
