--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /denisputnam-cryptography-overview-exercise/mysymmetricencryptiondecryption.py.zip
 /ECC/Archive.zip
 /ECC/denisputnam-blockchain-cryptography-exercise.zip
+denisputnam-cryptography-overview-exercise/__pycache__/**
